tests/ui/impl-trait/associated-type-undefine.stderr
error[E0308]: mismatched types
  --> $DIR/associated-type-undefine.rs:23:14
   |
LL |     type Bar = impl Sized;
   |                ---------- the expected opaque type
...
LL |         ((), ())
   |              ^^ expected opaque type, found `()`
   |
   = note: expected opaque type `<() as Foo>::Bar`
                found unit type `()`
note: this item must have the opaque type in its signature in order to be able to register hidden types
  --> $DIR/associated-type-undefine.rs:22:8
   |
LL |     fn foo(self) -> (<Self as Foo>::Gat<u32>, <Self as Foo>::Gat<Self>) {
   |        ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
